# src/routes/user.ts
@@ -1,10 +1,10 @@
 import { Router } from 'express';
-import { logoutUser, signInUser } from '../controllers/userController';
+import { signOutUser, signInUser } from '../controllers/userController';
 import { authenticateToken } from '../middlewares/authHandler';
 
 const userRouter = Router();
 
 userRouter.post('/signin', signInUser);
-userRouter.post('/logout', authenticateToken, logoutUser);
+userRouter.post('/signout', authenticateToken, signOutUser);
 
 export default userRouter;
